--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				</div>
 				<div>
 					<ul>
-						<li class="gras flex">Derect Messages <i class="fas fa-plus"></i></li>
+						<li class="gras flex">Direct Messages <i class="fas fa-plus"></i></li>
 						<li><i class="fas fa-heart puce vert"></i>Slack bot</li>
 						<li><i class="fas fa-circle puce vert"></i>Jeff Bezos</li>
 						<li><i class="fas fa-circle puce"></i>Bill Gates</li>
@@ -40,63 +40,84 @@
 			</div>
 			<div class="bloc3">
 				<div class="titre"><i class="fab fa-slack-hash"></i>design</div>
-				<div class="blocinfo">
-					<div>
-						<img src="https://res.cloudinary.com/dof5oucll/image/upload/c_scale,w_150/v1569828610/samples/people/boy-snow-hoodie.jpg" alt="avatar2" class="avatar2">
+				<div class="message">
+					<div class="blocinfo">
+						<div>
+							<img src="https://res.cloudinary.com/dof5oucll/image/upload/c_scale,w_150/v1569828610/samples/people/boy-snow-hoodie.jpg" alt="avatar2" class="avatar2">
+						</div>
+						<div class="info">
+							<p><span class="gras">Pierre</span><br>
+							Bonjour tout le monde &#128075; Bienvenue à la WAB<br>
+							<span class="gras">Regardez tout ce que l'on à déja fait &#127776; &#128073;</span> <a href="#">Mes composants</a>.</p>
+						</div>
 					</div>
-					<div class="info">
-						<p><span class="gras">Pierre</span><br>
-						Bonjour tout le monde &#128075; Bienvenue à la WAB<br>
-						<span class="gras">Regardez tout ce que l'on à déja fait &#127776; &#128073;</span> <a href="#">Mes composants</a>.</p>
+					<div class="blocinfo">
+						<div>
+							<img src="https://res.cloudinary.com/dof5oucll/image/upload/c_scale,w_150/v1569828610/samples/people/boy-snow-hoodie.jpg" alt="avatar2">
+						</div>
+						<div class="info">
+							<p><span class="gras">Brigitte</span><br>
+							yay! &#129304;</p>
+						</div>
+					</div>
+					<div class="blocinfo">
+						<div>
+							<img src="https://res.cloudinary.com/dof5oucll/image/upload/c_scale,w_150/v1569828610/samples/people/boy-snow-hoodie.jpg" alt="avatar2">
+						</div>
+						<div class="info">
+							<p><span class="gras">Arthur</span><br>
+							Trop cool, mes <a href="#" class="rose">.cards</a> sont en lignes &#128526;</p>
+						</div>
+					</div>
+					<div class="blocinfo">
+						<div>
+							<img src="https://res.cloudinary.com/dof5oucll/image/upload/c_scale,w_150/v1569828610/samples/people/boy-snow-hoodie.jpg" alt="avatar2">
+						</div>
+						<div class="info">
+							<p><span class="gras">Gérard</span><br>
+							J'ai réussi à faire mon template sans Bootstrap &#129299;</p>
+						</div>
+					</div>
+					<div class="blocinfo">
+						<div>
+							<img src="https://res.cloudinary.com/dof5oucll/image/upload/c_scale,w_150/v1569828610/samples/people/boy-snow-hoodie.jpg" alt="avatar2">
+						</div>
+						<div class="info">
+							<p><span class="gras">Florian</span><br>
+							Salut les Designer! Avez vous créée votre repository Github, pushé, tirer une branche et comite sans utiliser la souris &#128526;</p>
+							<p>Blague à part nous avons vu depuis le début:</p>
+							<ul>
+								<li>L'indentation</li>
+								<li>Organiser son code</li>
+								<li>Les selecteurs CSS: <a href="#" class="rose">balise.class#id</a></li>
+								<li>Flexbox</li>
+								<li>Bootstrap</li>
+								<li>Javascript: coming soon</li>
+							</ul>
+							<p>J'espere que cela vous plait &#128187;!</p>
+						</div>
+					</div>
+					<div class="blocinfo">
+						<div>
+							<img src="https://res.cloudinary.com/dof5oucll/image/upload/c_scale,w_150/v1569828610/samples/people/boy-snow-hoodie.jpg" alt="avatar2">
+						</div>
+						<div class="info">
+							<p><span class="gras">Florian</span><br>
+							Salut les Designer! Avez vous créée votre repository Github, pushé, tirer une branche et comite sans utiliser la souris &#128526;</p>
+							<p>Blague à part nous avons vu depuis le début:</p>
+							<ul>
+								<li>L'indentation</li>
+								<li>Organiser son code</li>
+								<li>Les selecteurs CSS: <a href="#" class="rose">balise.class#id</a></li>
+								<li>Flexbox</li>
+								<li>Bootstrap</li>
+								<li>Javascript: coming soon</li>
+							</ul>
+							<p>J'espere que cela vous plait &#128187;!</p>
+						</div>
 					</div>
 				</div>
-				<div class="blocinfo">
-					<div>
-						<img src="https://res.cloudinary.com/dof5oucll/image/upload/c_scale,w_150/v1569828610/samples/people/boy-snow-hoodie.jpg" alt="avatar2" class="avatar2">
-					</div>
-					<div class="info">
-						<p><span class="gras">Brigitte</span><br>
-						yay! &#129304;</p>
-					</div>
-				</div>
-				<div class="blocinfo">
-					<div>
-						<img src="https://res.cloudinary.com/dof5oucll/image/upload/c_scale,w_150/v1569828610/samples/people/boy-snow-hoodie.jpg" alt="avatar2" class="avatar2">
-					</div>
-					<div class="info">
-						<p><span class="gras">Arthur</span><br>
-						Trop cool, mes <a href="#" class="rose">.cards</a> sont en lignes &#128526;</p>
-					</div>
-				</div>
-				<div class="blocinfo">
-					<div>
-						<img src="https://res.cloudinary.com/dof5oucll/image/upload/c_scale,w_150/v1569828610/samples/people/boy-snow-hoodie.jpg" alt="avatar2" class="avatar2">
-					</div>
-					<div class="info">
-						<p><span class="gras">Gérard</span><br>
-						J'ai réussi à faire mon template sans Bootstrap &#129299;</p>
-					</div>
-				</div>
-				<div class="blocinfo">
-					<div>
-						<img src="https://res.cloudinary.com/dof5oucll/image/upload/c_scale,w_150/v1569828610/samples/people/boy-snow-hoodie.jpg" alt="avatar2" class="avatar2">
-					</div>
-					<div class="info">
-						<p><span class="gras">Florian</span><br>
-						Salut les Designer! Avez vous créée votre repository Github, pushé, tirer une branche et comite sans utiliser la souris &#128526;</p>
-						<p>Blague à part nous avons vu depuis le début:</p>
-						<ul>
-							<li>L'indentation</li>
-							<li>Organiser son code</li>
-							<li>Les selecteurs CSS: <a href="#" class="rose">balise.class#id</a></li>
-							<li>Flexbox</li>
-							<li>Bootstrap</li>
-							<li>Javascript: coming soon</li>
-						</ul>
-						<p>J'espere que cela vous plait &#128187;!</p>
-						<input type="Messages" placeholder="Type your message...">
-					</div>
-				</div>
+				<input type="Messages" placeholder="Type your message...">
 			</div>
 		</div>
 	</body>
