--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 						</div>
 					</div>
 				</div>
-				<input type="Messages" placeholder="Type your message...">
+				<input type="Messages" name="Messages" placeholder="Type your message...">
 			</div>
 		</div>
 	</body>
