--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						</div>
 						<div class="info">
 							<p><span class="gras">Arthur</span><br>
-							Trop cool, mes <a href="#" class="rose">.cards</a> sont en lignes &#128526;</p>
+							Trop cool, mes <code class="rose">.cards </code>sont en lignes &#128526;</p>
 						</div>
 					</div>
 					<div class="blocinfo">
@@ -89,7 +89,7 @@
 							<ul>
 								<li>L'indentation</li>
 								<li>Organiser son code</li>
-								<li>Les selecteurs CSS: <a href="#" class="rose">balise.class#id</a></li>
+								<li>Les selecteurs CSS: <code class="rose">balise.class#id</code></li>
 								<li>Flexbox</li>
 								<li>Bootstrap</li>
 								<li>Javascript: coming soon</li>
@@ -108,7 +108,7 @@
 							<ul>
 								<li>L'indentation</li>
 								<li>Organiser son code</li>
-								<li>Les selecteurs CSS: <a href="#" class="rose">balise.class#id</a></li>
+								<li>Les selecteurs CSS:<code class="rose">balise.class#id</code></li>
 								<li>Flexbox</li>
 								<li>Bootstrap</li>
 								<li>Javascript: coming soon</li>
